--- a/examples/collections/index.html
+++ b/examples/collections/index.html
@@ -7,15 +7,22 @@
       import benchmark from '../benchmark.js';
       let target = document.getElementById('target');
       let progress = document.getElementById('progress');
-      let {dom, update} = render({text1:'name', text2: 'name2', cond: true});
+      let {dom, update} = render({
+        title: 'todo',
+        items: [
+          {name: 'car', completed: false, cost: 10, id: 'a'},
+          {name: 'plane', completed: true, cost: 100, id: 'b'},
+          {name: 'boat', completed: false, cost: 50, id: 'c'}
+        ]
+      });
       target.appendChild(dom);
 
-      benchmark(index => update({text1:'name ' + index, text2: 'name ' + index*2, cond: index % 2 === 0}), status => progress.textContent = status);
+//      benchmark(index => update({text1:'name ' + index, text2: 'name ' + index*2, cond: index % 2 === 0}), status => progress.textContent = status);
     </script>
 </head>
 <body>
 <div>
-    <span>example 2 - conditions</span>
+    <span>example 3 - collections</span>
     <div id="target"></div>
     <div id="progress"></div>
 </div>
