--- a/examples/collections/index.html
+++ b/examples/collections/index.html
@@ -7,17 +7,33 @@
       import benchmark from '../benchmark.js';
       let target = document.getElementById('target');
       let progress = document.getElementById('progress');
-      let {dom, update} = render({
-        title: 'todo',
-        items: [
-          {name: 'car', completed: false, cost: 10, id: 'a'},
-          {name: 'plane', completed: true, cost: 100, id: 'b'},
-          {name: 'boat', completed: false, cost: 50, id: 'c'}
-        ]
-      });
+      let title = 'todo';
+      let items = [
+        {name: 'car', completed: false, cost: 10, id: 'a'},
+        {name: 'plane', completed: true, cost: 100, id: 'b'},
+        {name: 'boat', completed: false, cost: 50, id: 'c'}
+      ];
+
+      let {dom, update} = render({title, items});
       target.appendChild(dom);
 
-//      benchmark(index => update({text1:'name ' + index, text2: 'name ' + index*2, cond: index % 2 === 0}), status => progress.textContent = status);
+      benchmark(index => {
+        items = [...items];
+        let rand = Math.floor(Math.random() * items.length);
+        let rand2 = Math.floor(Math.random() * items.length);
+        if (index % 3 === 0)
+          items.push({name: 'item ' + index, completed: !!(index % 2), cost: index, id: 'a' + index});
+        if (index % 5 === 0)
+          items.splice(rand, 1);
+        if (index % 7 === 0) {
+          let item = items.splice(rand, 1);
+          items.splice(rand2, 0, item[0]);
+        }
+
+        console.log(items);
+        update({title, items})
+        }, status => progress.textContent = status
+      );
     </script>
 </head>
 <body>
