fixed the remove then move case

--- a/examples/collections/index.html
+++ b/examples/collections/index.html
@@ -30,7 +30,7 @@
           items.splice(rand2, 0, item[0]);
         }
 
-        console.log(items);
+        console.log('new input items', items);
         update({title, items})
         }, status => progress.textContent = status
       );
