--- a/examples/collections/index.html
+++ b/examples/collections/index.html
@@ -19,18 +19,19 @@
 
       benchmark(index => {
         items = [...items];
-        let rand = Math.floor(Math.random() * items.length);
-        let rand2 = Math.floor(Math.random() * items.length);
         if (index % 3 === 0)
           items.push({name: 'item ' + index, completed: !!(index % 2), cost: index, id: 'a' + index});
-        if (index % 5 === 0)
+        if (index % 5 === 0) {
+          let rand = Math.floor(Math.random() * items.length);
           items.splice(rand, 1);
+        }
         if (index % 7 === 0) {
+          let rand = Math.floor(Math.random() * items.length);
+          let rand2 = Math.floor(Math.random() * items.length);
           let item = items.splice(rand, 1);
           items.splice(rand2, 0, item[0]);
         }
 
-        console.log('new input items', items);
         update({title, items})
         }, status => progress.textContent = status
       );
