--- a/examples/collections/index.html
+++ b/examples/collections/index.html
@@ -17,6 +17,25 @@
       let {dom, update} = render({title, items});
       target.appendChild(dom);
 
+//      for (let index=0; index < 1000; index++) {
+//        items = [...items];
+//        if (index % 3 === 0)
+//          items.push({name: 'item ' + index, completed: !!(index % 2), cost: index, id: 'a' + index});
+//        if (index % 5 === 0) {
+//          let rand = Math.floor(Math.random() * items.length);
+//          items.splice(rand, 1);
+//        }
+//        if (index % 7 === 0) {
+//          let rand = Math.floor(Math.random() * items.length);
+//          let rand2 = Math.floor(Math.random() * items.length);
+//          let item = items.splice(rand, 1);
+//          items.splice(rand2, 0, item[0]);
+//        }
+//
+//        update({title, items})
+//      }
+//
+
       benchmark(index => {
         items = [...items];
         if (index % 3 === 0)
