--- a/examples/basic/index.html
+++ b/examples/basic/index.html
@@ -1,17 +1,6 @@
 <html>
 <head>
-    <script type="module" src="./output.js"></script>
-    <script type="module" src="../benchmark.js"></script>
-    <script type="module">
-      import render from "./output.js";
-      import benchmark from '../benchmark.js';
-      let target = document.getElementById('target');
-      let progress = document.getElementById('progress');
-      let {dom, update} = render({text:'name'});
-      target.appendChild(dom);
-
-      benchmark(index => update({text: 'name ' + index}), status => progress.textContent = status);
-    </script>
+    <script src="index.js"></script>
 </head>
 <body>
 <div>
