--- a/examples/collections/index.html
+++ b/examples/collections/index.html
@@ -1,60 +1,6 @@
 <html>
 <head>
-    <script type="module" src="./output.js"></script>
-    <script type="module" src="../benchmark.js"></script>
-    <script type="module">
-      import render from "./output.js";
-      import benchmark from '../benchmark.js';
-      let target = document.getElementById('target');
-      let progress = document.getElementById('progress');
-      let title = 'todo';
-      let items = [
-        {name: 'car', completed: false, cost: 10, id: 'a'},
-        {name: 'plane', completed: true, cost: 100, id: 'b'},
-        {name: 'boat', completed: false, cost: 50, id: 'c'}
-      ];
-
-      let {dom, update} = render({title, items});
-      target.appendChild(dom);
-
-//      for (let index=0; index < 1000; index++) {
-//        items = [...items];
-//        if (index % 3 === 0)
-//          items.push({name: 'item ' + index, completed: !!(index % 2), cost: index, id: 'a' + index});
-//        if (index % 5 === 0) {
-//          let rand = Math.floor(Math.random() * items.length);
-//          items.splice(rand, 1);
-//        }
-//        if (index % 7 === 0) {
-//          let rand = Math.floor(Math.random() * items.length);
-//          let rand2 = Math.floor(Math.random() * items.length);
-//          let item = items.splice(rand, 1);
-//          items.splice(rand2, 0, item[0]);
-//        }
-//
-//        update({title, items})
-//      }
-//
-
-      benchmark(index => {
-        items = [...items];
-        if (index % 3 === 0)
-          items.push({name: 'item ' + index, completed: !!(index % 2), cost: index, id: 'a' + index});
-        if (index % 5 === 0) {
-          let rand = Math.floor(Math.random() * items.length);
-          items.splice(rand, 1);
-        }
-        if (index % 7 === 0) {
-          let rand = Math.floor(Math.random() * items.length);
-          let rand2 = Math.floor(Math.random() * items.length);
-          let item = items.splice(rand, 1);
-          items.splice(rand2, 0, item[0]);
-        }
-
-        update({title, items})
-        }, status => progress.textContent = status
-      );
-    </script>
+    <script type="module" src="index.js"></script>
 </head>
 <body>
 <div>
