organizing the test project

--- a/packages/project/lib/comp.jay.html
+++ b/packages/project/lib/comp.jay.html
@@ -13,5 +13,9 @@ data:
       n3: number
     </script>
 </head>
-<body></body>
+<body>
+    <div><span>s1: </span><span>{s1}</span></div>
+    <div><span>n1: </span><span>{n1}</span></div>
+    <div><span>b1: </span><span>{b1}</span></div>
+</body>
 </html>
