--- a/packages/compiler/test/fixtures/conditions/source.jay.html
+++ b/packages/compiler/test/fixtures/conditions/source.jay.html
@@ -9,8 +9,8 @@ data:
 </head>
 <body>
 <div>
-    <div style="color:red" if={cond}>{text1}</div>
-    <div style="color:green" if={!cond}>{text2}</div>
+    <div style="color:red" if="cond">{text1}</div>
+    <div style="color:green" if="!cond">{text2}</div>
 </div>
 </body>
 </html>
