rollup plugin works, but outputs TS file

--- a/packages/project/lib/comp.jay.html
+++ b/packages/project/lib/comp.jay.html
@@ -14,8 +14,10 @@ data:
     </script>
 </head>
 <body>
+<div>
     <div><span>s1: </span><span>{s1}</span></div>
     <div><span>n1: </span><span>{n1}</span></div>
     <div><span>b1: </span><span>{b1}</span></div>
+</div>
 </body>
 </html>
