add conditional to the example project

--- a/packages/project/lib/comp.jay.html
+++ b/packages/project/lib/comp.jay.html
@@ -16,8 +16,7 @@ data:
 <body>
 <div>
     <div><span>s1: </span><span>{s1}</span></div>
-    <div><span>n1: </span><span>{n1}</span></div>
-    <div><span>b1: </span><span>{b1}</span></div>
+    <div if="b1"><span>n1: </span><span>{n1}</span></div>
 </div>
 </body>
 </html>
