--- a/packages/project/lib/comp.jay.html
+++ b/packages/project/lib/comp.jay.html
@@ -17,6 +17,9 @@ data:
 <div>
     <div><span>s1: </span><span>{s1}</span></div>
     <div if="b1"><span>n1: </span><span>{n1}</span></div>
+    <div forEach="a1" item="item" trackBy="s2">
+        <div>{s3} - {n3}</div>
+    </div>
 </div>
 </body>
 </html>
