--- a/packages/compiler/test/fixtures/collections/source.jay.html
+++ b/packages/compiler/test/fixtures/collections/source.jay.html
@@ -14,7 +14,7 @@ data:
 <div>
     <h1>{title}</h1>
     <div>
-        <div forEach="items" item="item" trackBy="id">
+        <div forEach="items" trackBy="id">
             <span style="color:green; width: 100px; display: inline-block;">{name}</span>
             <span style="color:red; width: 100px; display: inline-block;">{completed}</span>
             <span style="color:blue; width: 100px; display: inline-block;">{cost}</span>
