large refactoring of the types system

--- a/packages/project/lib/comp.jay.html
+++ b/packages/project/lib/comp.jay.html
@@ -15,9 +15,9 @@ data:
 </head>
 <body>
 <div>
-    <div><span>s1: </span><span>{s1}</span></div>
+    <div><span>hello udi: </span><span>{s1}</span></div>
     <div if="b1"><span>n1: </span><span>{n1}</span></div>
-    <div forEach="a1" item="item" trackBy="s3">
+    <div forEach="a1" trackBy="s3">
         <div>{s3} - {n3}</div>
     </div>
 </div>
