added resolution for events question

--- a/packages/project/lib/index.html
+++ b/packages/project/lib/index.html
@@ -9,6 +9,7 @@
     <div class="select-example">
         <label for="choose-example">Select example to view</label><select id="choose-example"></select>
     </div>
+    <div class="cycles"><label for="cycles">Select number of cycles</label><input id="cycles" value="1000"/></div>
     <div class="progress" id="progress"></div>
     <div class="stage" id="target"></div>
 </div>
