updated the example project to have an example with refs - the counter.comp.ts updated the cli and rollup plugsin to pass the filename of the jay file to the compiler fixed bug in compiler when handling refs (simple case)

--- a/packages/project/lib/collections.jay.html
+++ b/packages/project/lib/collections.jay.html
@@ -3,7 +3,7 @@
     <script type="application/yaml-jay">
 data:
     items:
-        name: string
+     -  name: string
         completed: boolean
         cost: number
         id: string
