collection fixture to use proper name for the items type and member

--- a/packages/compiler/test/fixtures/collections/source.jay.html
+++ b/packages/compiler/test/fixtures/collections/source.jay.html
@@ -3,7 +3,7 @@
     <script type="application/yaml-jay">
 data:
     title: string
-    items:
+    things:
     -  name: string
        completed: boolean
        cost: number
