--- a/packages/project/lib/index.html
+++ b/packages/project/lib/index.html
@@ -2,6 +2,7 @@
 <head>
     <script src="index.js"></script>
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="todo.css">
 </head>
 <body>
 <div>
