--- a/packages/compiler/test/fixtures/attributes/source.jay.html
+++ b/packages/compiler/test/fixtures/attributes/source.jay.html
@@ -12,7 +12,8 @@ data:
 <div>
     <div style="background: red;">{text}</div>
     <div data-attribute="a value">static</div>
-    <div value="second value">{text2}</div>
+    <input value="some value"/>
+    <input value="{text2}"/>
     <div class="main second">{text3}</div>
     <div class="{bool1?main}">{text3}</div>
     <div class="{bool1?main:second}">{text3}</div>
