fixed different problems in the todo list example

--- a/packages/project/lib/index.html
+++ b/packages/project/lib/index.html
@@ -1,5 +1,8 @@
-<html>
+<!doctype html>
+<html lang="en">
 <head>
+    <meta charset="utf-8">
+    <title>Jay Example Project</title>
     <script src="index.js"></script>
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="todo.css">
