--- a/packages/compiler/test/fixtures/attributes/source.jay.html
+++ b/packages/compiler/test/fixtures/attributes/source.jay.html
@@ -13,7 +13,8 @@ data:
     <div style="background: red;">{text}</div>
     <div data-attribute="a value">static</div>
     <input value="some value"/>
-    <input value="{text2}"/>
+    <input id="abc" value="{text2}"/>
+    <label for="abc"/>
     <div class="main second">{text3}</div>
     <div class="{bool1?main}">{text3}</div>
     <div class="{bool1?main:second}">{text3}</div>
