--- a/packages/compiler/test/fixtures/attributes/source.jay.html
+++ b/packages/compiler/test/fixtures/attributes/source.jay.html
@@ -6,6 +6,7 @@ data:
     text2: string
     text3: string
     bool1: boolean
+    color: string
     </script>
 </head>
 <body>
@@ -14,6 +15,7 @@ data:
     <div data-attribute="a value">static</div>
     <input value="some value"/>
     <input id="abc" value="{text2}"/>
+    <input type="checkbox" checked="{bool1}" value="{text2}"/>
     <label for="abc"/>
     <div class="main second">{text3}</div>
     <div class="{bool1?main}">{text3}</div>
