improved the nested component tests

--- a/packages/compiler/test/fixtures/component-in-component/source.jay.html
+++ b/packages/compiler/test/fixtures/component-in-component/source.jay.html
@@ -11,8 +11,9 @@ data:
 <body>
 <div>
     <Counter initialValue={count1} />
-    <Counter initialValue={count2} />
-    <Counter initialValue={count3} />
+    <Counter initialValue="{count2} + 2" />
+    <Counter initialValue="{count1} + {count2}"/>
+    <Counter initialValue="12"/>
 </div>
 </body>
 </html>
