--- a/packages/compiler/test/fixtures/component-in-component/source.jay.html
+++ b/packages/compiler/test/fixtures/component-in-component/source.jay.html
@@ -1,11 +1,17 @@
 <html>
 <head>
-    <link rel="import" href="../counter/counter" component="Counter"/>
     <script type="application/yaml-jay">
+imports:
+  ../counter/counter:
+  - symbol: Counter
+  ../counter/generated:
+  - symbol: CounterViewState
+    as: CounterData
 data:
   count1: number
   count2: number
   count3: number
+  count4: CounterData
     </script>
 </head>
 <body>
@@ -14,6 +20,7 @@ data:
     <Counter initialValue="{count2} + 2" />
     <Counter initialValue="{count1} + {count2}"/>
     <Counter initialValue="12"/>
+    <Counter initialValue="{count4.count}"/>
 </div>
 </body>
 </html>
