--- a/examples/lib/mini-benchmark/table/table-host.jay.html
+++ b/examples/lib/mini-benchmark/table/table-host.jay.html
@@ -1,20 +1,21 @@
 <html>
 <head>
-    <link href="./table-component" rel="import" component="Table"/>
     <script type="application/yaml-jay">
+imports:
+  ./table:
+  - symbol: Table
+    as: TableComp
 data:
-  cycles: number
   size: number
   updates: number
     </script>
 </head>
 <body>
 <div>
-    <div><label for="cycles">Number of test cycles to run: </label><input id="cycles" ref="cycles">{cycles}</div>
-    <div><label for="size"/>Size of the table to generate: </label><input id="size" ref="size">{size}</div>
-    <div><label for="updates"/>Number of updates at each cycle: </label><input id="updates" ref="updates">{updates}</div>
+    <div><label for="size"/>Size of the table to generate: </label><input id="size" ref="size" value="{size}"></div>
+    <div><label for="updates"/>Number of updates at each cycle: </label><input id="updates" ref="updates" value="{updates}"></div>
     <button ref="run">run</button>
-    <table ref="table" size="{size}"/>
+    <TableComp ref="table" size="{size}"/>
 </div>
 </body>
 </html>
