Support for imported types and rendering the right DynamicReference types for different HTML elements + nested components

--- a/packages/compiler/test/fixtures/component-in-component/source.jay.html
+++ b/packages/compiler/test/fixtures/component-in-component/source.jay.html
@@ -16,7 +16,7 @@ data:
 </head>
 <body>
 <div>
-    <Counter initialValue={count1} />
+    <Counter ref="counter1" initialValue={count1} />
     <Counter initialValue="{count2} + 2" />
     <Counter initialValue="{count1} + {count2}"/>
     <Counter initialValue="12"/>
