updated example with change in imports

--- a/examples/lib/mini-benchmark/table/table-host.jay.html
+++ b/examples/lib/mini-benchmark/table/table-host.jay.html
@@ -1,10 +1,7 @@
 <html>
 <head>
+    <link rel="import" href="./table" names="Table as TableComp"/>
     <script type="application/yaml-jay">
-imports:
-  ./table:
-  - symbol: Table
-    as: TableComp
 data:
   size: number
   updates: number
