added logic and tests for refs with non JS identifier names

--- a/packages/compiler/test/fixtures/component-in-component/source.jay.html
+++ b/packages/compiler/test/fixtures/component-in-component/source.jay.html
@@ -13,7 +13,7 @@ data:
 <body>
 <div>
     <Counter ref="counter1" initialValue={count1} />
-    <Counter initialValue="{count2} + 2" />
+    <Counter ref="counter-two" initialValue="{count2} + 2" />
     <Counter initialValue="{count1} + {count2}"/>
     <Counter initialValue="12"/>
     <Counter initialValue="{count4.count}"/>
