--- a/packages/compiler/test/fixtures/counter/source.jay.html
+++ b/packages/compiler/test/fixtures/counter/source.jay.html
@@ -9,7 +9,7 @@ data:
 <div>
     <button ref="subtracter">-</button>
     <span style="margin: 0 16px">{count}</span>
-    <button ref="adder">+</button>
+    <button ref="adder-button">+</button>
 </div>
 </body>
 </html>
