--- a/examples/lib/mini-benchmark/table/table-host.jay.html
+++ b/examples/lib/mini-benchmark/table/table-host.jay.html
@@ -9,8 +9,8 @@ data:
 </head>
 <body>
 <div>
-    <div><label for="size"/>Size of the table to generate: </label><input id="size" ref="size" value="{size}"></div>
-    <div><label for="updates"/>Number of updates at each cycle: </label><input id="updates" ref="updates" value="{updates}"></div>
+    <div><label for="size">Size of the table to generate: </label><input id="size" ref="size" value="{size}"></div>
+    <div><label for="updates">Number of updates at each cycle: </label><input id="updates" ref="updates" value="{updates}"></div>
     <TableComp ref="table" tableSize="{size}" numCellsToUpdate="{updates}"/>
 </div>
 </body>
