completed react benchmark

--- a/examples/lib/mini-benchmark/table/table.jay.html
+++ b/examples/lib/mini-benchmark/table/table.jay.html
@@ -12,9 +12,11 @@ data:
 <body>
 <div>
     <table>
+        <tbody>
         <tr forEach="line" trackBy="id">
             <td forEach="cell" trackBy="id">{value}</td>
         </tr>
+        </tbody>
     </table>
 </div>
 </body>
