--- a/examples/lib/mini-benchmark/main.jay.html
+++ b/examples/lib/mini-benchmark/main.jay.html
@@ -17,7 +17,7 @@ data:
 </head>
 <body>
 <div>
-    <div class="title">Jay Examples</div>
+    <div class="title">Jay Benchmarks - the Jay Project</div>
     <div class="select-example">
         <label for="choose-example">Select example to view</label>
         <select id="choose-example" ref="choose-example">
