--- a/packages/compiler/test/fixtures/recursive-components/source.jay.html
+++ b/packages/compiler/test/fixtures/recursive-components/source.jay.html
@@ -8,6 +8,7 @@ data: Node
 <body>
 <div>
     <div>{name}</div>
+    <treeNode props="firstChild"/>
     <ul>
         <li forEach="children" trackBy="id">
             <treeNode name="{name}" id="{id}" children="{children}"/>
