--- a/packages/compiler/test/fixtures/recursive-components/source.jay.html
+++ b/packages/compiler/test/fixtures/recursive-components/source.jay.html
@@ -8,13 +8,13 @@ data: Node
 <body>
 <div>
     <div>{name}</div>
-    <treeNode props="firstChild"/>
+    <treeNode props="{firstChild}"/>
     <ul>
         <li forEach="children" trackBy="id">
-            <treeNode name="{name}" id="{id}" children="{children}"/>
+            <treeNode name="{name}" id="{id}" children="{children}" ref="counter1"/>
         </li>
         <li forEach="children" trackBy="id">
-            <treeNode props="{.}"/>
+            <treeNode props="{.}" ref="counterTwo"/>
         </li>
     </ul>
 </div>
