CSS to make the tree appear more like a tree

--- a/examples/tree/lib/tree-node.jay.html
+++ b/examples/tree/lib/tree-node.jay.html
@@ -11,7 +11,7 @@ data:
 <body>
 <div>
     <div ref="head">
-        <span>{headChar}</span>
+        <span class="tree-arrow">{headChar}</span>
         <span>{node.name}</span>
     </div>
     <ul if="open">
