added support for missing values in view state - moved from using . to using ?.

--- a/packages/compiler/test/fixtures/basics/data-types/source.jay.html
+++ b/packages/compiler/test/fixtures/basics/data-types/source.jay.html
@@ -14,6 +14,12 @@ data:
      </script>
 </head>
 <body>
-<div></div>
+<div>
+    <span>{s1}</span>
+    <span>{n1}</span>
+    <span>{b1}</span>
+    <span>{o1.s2}</span>
+    <span>{o1.n2}</span>
+</div>
 </body>
 </html>
