--- a/packages/compiler/test/fixtures/basics/attributes/source.jay.html
+++ b/packages/compiler/test/fixtures/basics/attributes/source.jay.html
@@ -20,6 +20,10 @@ data:
     <div class="main second">{text3}</div>
     <div class="{bool1?main}">{text3}</div>
     <div class="{bool1?main:second}">{text3}</div>
+    <div data-attribute="{text}"/>
+    <div data-attribute="{text}-abcd"/>
+    <div data-attribute="abcd-{text}"/>
+    <div data-attribute="abcd-{text}-abcd"/>
 </div>
 </body>
 </html>
