extracting the refs concerns from sandbox-bridge and creating dedicated tests for it

--- a/packages/secure/test/events-synthetic/regular/comp.jay.html
+++ b/packages/secure/test/events-synthetic/regular/comp.jay.html
@@ -14,7 +14,7 @@ data:
     <button ref="button" data-id="button">button</button>
     <input ref="input" data-id="input"/>
 
-    <div forEach="items">
+    <div forEach="items" matchBy="id">
         <button ref="itemButton" data-id="{id}-itemButton">{text}</button>
         <input ref="itemInput" data-id="{id}-itemInput"/>
     </div>
