made data id dynamic for testing

--- a/packages/secure/test/top-level-collection-conditions/regular/app.jay.html
+++ b/packages/secure/test/top-level-collection-conditions/regular/app.jay.html
@@ -12,8 +12,8 @@ data:
 </head>
 <body>
 <div>
-    <Counter if="cond" title="conditional counter" initialCount="{initialCount}" />
-    <Counter forEach="counters" trackBy="id" title="collection counter {id}" initialCount="{initialCount}" />
+    <Counter if="cond" title="conditional counter" initialCount="{initialCount}" id="cond"/>
+    <Counter forEach="counters" trackBy="id" title="collection counter {id}" initialCount="{initialCount}" id="{id}"/>
 </div>
 </body>
 </html>
