--- a/packages/secure/test/top-level-collection-conditions/regular/counter.jay.html
+++ b/packages/secure/test/top-level-collection-conditions/regular/counter.jay.html
@@ -4,15 +4,16 @@
 data:
   title: string
   count: number
+  id: string
     </script>
 </head>
 <body>
 <div>
-    <div data-id="title">{title}</div>
+    <div data-id="{id}-title">{title}</div>
     <div>
-        <button data-id="sub" ref="subtracter">-</button>
-        <span data-id="count" style="margin: 0 16px">{count}</span>
-        <button data-id="add" ref="adder">+</button>
+        <button data-id="{id}-sub" ref="subtracter">-</button>
+        <span data-id="{id}-count" style="margin: 0 16px">{count}</span>
+        <button data-id="{id}-add" ref="adder">+</button>
     </div>
 </div>
 </body>
