completed setting up the tests for comp in comp

--- a/packages/secure/test/comp-in-comp/regular/child.jay.html
+++ b/packages/secure/test/comp-in-comp/regular/child.jay.html
@@ -8,9 +8,9 @@ data:
 </head>
 <body>
 <div>
-    <div>{text}</div>
-    <div>{text2}</div>
-    <button ref="button">click</button>
+    <div id="child-text-1">{text}</div>
+    <div id="child-text-2">{text2}</div>
+    <button id="child-button" ref="button">click</button>
 </div>
 </body>
 </html>
