--- a/packages/secure/test/comp-in-comp/regular/parent.jay.html
+++ b/packages/secure/test/comp-in-comp/regular/parent.jay.html
@@ -9,8 +9,8 @@ data:
 </head>
 <body>
 <div>
-    <div>{text}</div>
-    <button ref="button">click</button>
+    <div id="parent-text">{text}</div>
+    <button id="parent-button" ref="button">click</button>
     <Child textFromParent="childText" ref="child"/>
 </div>
 </body>
