two first tests working - 2 of 5

--- a/packages/secure/test/comp-in-comp/regular/parent.jay.html
+++ b/packages/secure/test/comp-in-comp/regular/parent.jay.html
@@ -16,7 +16,7 @@ data:
     <div id="coordinate-from-child-event">{coordinateFromChildEvent}</div>
     <button id="parent-changes-child-prop-button" ref="parentChangesChildPropButton">parent changes child prop</button>
     <button id="parent-calls-child-api-button" ref="parentCallsChildAPIButton">parent calls child api</button>
-    <Child textFromParent="childText" ref="child"/>
+    <Child textFromParent="{childText}" ref="child"/>
 </div>
 </body>
 </html>
