--- a/packages/secure/test/comp-in-comp/regular/child.jay.html
+++ b/packages/secure/test/comp-in-comp/regular/child.jay.html
@@ -4,15 +4,16 @@
 data:
   textFromProp: string
   textFromAPI: string
+  id: string
     </script>
 </head>
 <body>
 <div>
-    <div id="child-text-from-prop">{textFromProp}</div>
-    <div id="child-text-from-api">{textFromAPI}</div>
-    <button id="event-to-parent-button" ref="eventToParent">event to parent</button>
-    <button id="event-to-parent-to-child-prop-button" ref="eventToParentToChildProp">event to parent, parent update child prop</button>
-    <button id="event-to-parent-to-child-api-button" ref="eventToParentToChildAPI">event to parent, parent calls child api</button>
+    <div id="child-text-from-prop-{id}">{textFromProp}</div>
+    <div id="child-text-from-api-{id}">{textFromAPI}</div>
+    <button id="event-to-parent-button-{id}" ref="eventToParent">event to parent</button>
+    <button id="event-to-parent-to-child-prop-button-{id}" ref="eventToParentToChildProp">event to parent, parent update child prop</button>
+    <button id="event-to-parent-to-child-api-button-{id}" ref="eventToParentToChildAPI">event to parent, parent calls child api</button>
 </div>
 </body>
 </html>
