--- a/packages/secure/test/comp-in-comp/regular/parent.jay.html
+++ b/packages/secure/test/comp-in-comp/regular/parent.jay.html
@@ -7,6 +7,9 @@ data:
   viewStateFromChildEvent: string
   coordinateFromChildEvent: string
   childText: string
+  dynamicChildren:
+    - id: string
+      childText: string
     </script>
 </head>
 <body>
@@ -16,7 +19,10 @@ data:
     <div id="coordinate-from-child-event">{coordinateFromChildEvent}</div>
     <button id="parent-changes-child-prop-button" ref="parentChangesChildPropButton">parent changes child prop</button>
     <button id="parent-calls-child-api-button" ref="parentCallsChildAPIButton">parent calls child api</button>
-    <Child textFromParent="{childText}" ref="child"/>
+    <Child textFromParent="{childText}" id="static" ref="staticChild"/>
+    <div forEach="dynamicChildren" trackBy="id">
+        <Child textFromParent="{childText}" id="{id}" ref="dynamicChildren"/>
+    </div>
 </div>
 </body>
 </html>
