implemented the exec native on element

--- a/packages/secure/test/events-synthetic/regular/comp.jay.html
+++ b/packages/secure/test/events-synthetic/regular/comp.jay.html
@@ -12,6 +12,7 @@ data:
 <div>
     <div ref="result" data-id="result">{text}</div>
     <button ref="button" data-id="button">button</button>
+    <button ref="buttonExec$" data-id="button-exec$">button exec native</button>
     <input ref="input" data-id="input"/>
 
     <div forEach="items" matchBy="id">
