--- a/examples/mini-benchmark/lib/table/table-host.jay.html
+++ b/examples/mini-benchmark/lib/table/table-host.jay.html
@@ -11,7 +11,14 @@ data:
 <div>
     <div><label for="size">Size of the table to generate: </label><input id="size" ref="size" value="{size}"></div>
     <div><label for="updates">Number of updates at each cycle: </label><input id="updates" ref="updates" value="{updates}"></div>
-    <TableComp ref="table" tableSize="{size}" numCellsToUpdate="{updates}"/>
+    <div><label for="state-management">Number of updates at each cycle: </label>
+        <select id="state-management" ref="state-management">
+            <option value="mutable" selected>mutable</option>
+            <option value="immutable">immutable</option>
+            <option value="immer">immer</option>
+        </select>
+    </div>
+    <TableComp ref="table" tableSize="{size}" numCellsToUpdate="{updates}" stateManagement="{stateManagement}"/>
 </div>
 </body>
 </html>
