--- a/examples/mini-benchmark/lib-secure/main/index.html
+++ b/examples/mini-benchmark/lib-secure/main/index.html
@@ -3,6 +3,13 @@
 <head>
     <meta charset="utf-8">
     <title>Jay Example Project</title>
+    <script type="application/javascript">
+        window.process = {
+            env: {
+                NODE_ENV: "production"
+            }
+        };
+    </script>
     <script src="index.js"></script>
     <link rel="stylesheet" href="index.css">
 </head>
