support in secure for the changes in refs - only basic and events-basic tests are working at this stage

--- a/packages/secure/test/basic/regular/app.jay.html
+++ b/packages/secure/test/basic/regular/app.jay.html
@@ -7,7 +7,7 @@ data:
 </head>
 <body>
 <div>
-    <Basic safe firstName="John" lastName="Smith" />
+    <Basic safe firstName="John" lastName="Smith" ref="comp1"/>
 </div>
 </body>
 </html>
