--- a/packages/secure/test/events-basic/regular/app.jay.html
+++ b/packages/secure/test/events-basic/regular/app.jay.html
@@ -7,7 +7,7 @@ data:
 </head>
 <body>
 <div>
-    <Counter title="first counter" initialCount="12" />
+    <Counter title="first counter" initialCount="12" ref="a" />
 </div>
 </body>
 </html>
