--- a/packages/secure/test/exec-synthetic/regular/comp.jay.html
+++ b/packages/secure/test/exec-synthetic/regular/comp.jay.html
@@ -13,7 +13,7 @@ data:
     <div ref="result" data-id="result">{text}</div>
     <button ref="buttonExec$Global" data-id="button-exec-global">button exec global</button>
     <button ref="buttonExec$Element" data-id="button-exec-element">button exec element</button>
-    <div forEach="items" matchBy="id">
+    <div forEach="items" trackBy="id">
         <button ref="itemButtonExec$Element" data-id="item-{id}-button-exec-element">item {text} exec element</button>
     </div>
 </div>
