added json-patch as another option in the mini-benchmark

--- a/examples/mini-benchmark/lib/table/table-host.jay.html
+++ b/examples/mini-benchmark/lib/table/table-host.jay.html
@@ -16,6 +16,7 @@ data:
         <select id="state-management" ref="state-management">
             <option value="immutable">immutable</option>
             <option value="immer">immer</option>
+            <option value="json-patch">json-patch</option>
         </select>
     </div>
     <TableComp ref="table" tableSize="{size}" numCellsToUpdate="{updates}" stateManagement="{stateManagement}"/>
