added test for nested ref for sandbox element bridge

--- a/packages/compiler/test/fixtures/basics/refs/source.jay.html
+++ b/packages/compiler/test/fixtures/basics/refs/source.jay.html
@@ -9,6 +9,9 @@ data:
 <div>
     <div ref="ref1">{text}</div>
     <div ref="ref$">{text}</div>
+    <div>
+        <div ref="ref3">{text}</div>
+    </div>
 </div>
 </body>
 </html>
