completed the scrum board example - non secure mode

--- a/examples/scrum-board/lib/board.jay.html
+++ b/examples/scrum-board/lib/board.jay.html
@@ -11,7 +11,7 @@ data:
 </head>
 <body>
 <div class="scrum-board">
-    <h1>{title}</h1>
+    <h1 class="board-title">{title}</h1>
     <Pillar ref="pillars" forEach="pillars" trackBy="id" props="{pillarData}"/>
 </div>
 </body>
