--- a/examples/scrum-board/lib/index.html
+++ b/examples/scrum-board/lib/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div>
-      <div class="title">Jay Todo MVC Example</div>
+      <div class="title">Scrum board example</div>
       <div class="stage" id="target"></div>
     </div>
   </body>
