--- a/examples/scrum-board/lib/pillar.jay.html
+++ b/examples/scrum-board/lib/pillar.jay.html
@@ -12,7 +12,7 @@ data:
 </head>
 <body>
 <div class="pillar">
-    <h2>title</h2>
+    <h2 class="pillar-title">{title}</h2>
     <div class="task-list">
         <Task forEach="tasks" trackBy="id" props="{.}" ref="tasks"/>
     </div>
