support for accessor expressions, supporting not expression `!obj.prop.prop`

--- a/packages/compiler/test/fixtures/basics/attributes/source.jay.html
+++ b/packages/compiler/test/fixtures/basics/attributes/source.jay.html
@@ -25,6 +25,7 @@ data:
     <div data-attribute="abcd-{text}"/>
     <div data-attribute="abcd-{text}-abcd"/>
     <button disabled="{bool1}"></button>
+    <button disabled="{!bool1}"></button>
     <button disabled></button>
 </div>
 </body>
