--- a/examples/scrum-board/lib/task.jay.html
+++ b/examples/scrum-board/lib/task.jay.html
@@ -15,7 +15,9 @@
       <h3 class="task-title">{title}</h3>
       <p class="task-description">{description}</p>
       <div class="action-buttons">
-        <button class="action-button prev" ref="prev" disabled="{!hasPrev}">Move to Previous</button>
+        <button class="action-button prev" ref="prev" disabled="{!hasPrev}">
+          Move to Previous
+        </button>
         <button class="action-button next" ref="next" disabled="{!hasNext}">Move to Next</button>
         <button class="action-button up" ref="up" disabled="{isTop}">Up</button>
         <button class="action-button down" ref="down" disabled="{isBottom}">Down</button>
