--- a/examples/mini-benchmark/lib/table/table-host.jay.html
+++ b/examples/mini-benchmark/lib/table/table-host.jay.html
@@ -1,6 +1,7 @@
 <html>
   <head>
-    <link rel="import" href="./table" names="Table as TableComp" />
+    <!-- TODO support names="Table as TableComp" -->
+    <link rel="import" href="./table" names="Table" />
     <script type="application/yaml-jay">
       data:
         size: number
@@ -26,7 +27,7 @@
           <option value="json-patch">json-patch</option>
         </select>
       </div>
-      <TableComp
+      <table
         ref="table"
         tableSize="{size}"
         numCellsToUpdate="{updates}"
