[fix] mini benchmark sandbox code

--- a/packages/compiler/test/fixtures/sandboxed/sandboxed-counter/source/app.jay.html
+++ b/packages/compiler/test/fixtures/sandboxed/sandboxed-counter/source/app.jay.html
@@ -2,12 +2,14 @@
 <head>
     <link rel="import" href="./counter" names="Counter" sandbox="yes"/>
     <script type="application/yaml-jay">
-data:
+      data:
+        incrementBy: number
     </script>
 </head>
 <body>
 <div>
-    <Counter initialValue="12" ref="a"></Counter>
+    <input type="number" id="interval" name="increment" min="1" max="100"/>
+    <Counter initialValue="12" incrementBy="{incrementBy}" ref="a"></Counter>
 </div>
 </body>
 </html>
