--- a/examples/mini-benchmark/index.html
+++ b/examples/mini-benchmark/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Jay Example Project</title>
+    <title>Jay mini Benchmark</title>
   </head>
   <body>
+  <div class="title">Jay mini Benchmark</div>
     <div>
       <div class="stage" id="target"></div>
       <script type="module" src="lib/index.ts"></script>
