--- a/examples/todo/index.html
+++ b/examples/todo/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Jay Example Project</title>
+    <title>Jay Todo MVC Example - Single Component</title>
   </head>
   <body>
+  <div class="title">Jay Todo MVC Example - Single Component</div>
     <div>
-      <div class="title">Jay Todo MVC Example</div>
       <div class="stage" id="target"></div>
       <script type="module" src="lib/index.ts"></script>
     </div>
