--- a/packages/rollup-plugin/test/jayRuntime/fixtures/sandbox-counter/source/index.html
+++ b/packages/rollup-plugin/test/jayRuntime/fixtures/sandbox-counter/source/index.html
@@ -2,14 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Jay Example Project</title>
-    <script src="index.js"></script>
-    <link rel="stylesheet" href="index.css" />
+    <title>Jay Counter Example</title>
   </head>
   <body>
+    <div class="title">Jay Counter Example</div>
     <div>
-      <div class="title">Jay Counter</div>
       <div class="stage" id="target"></div>
+      <script type="module" src="./index.ts"></script>
     </div>
   </body>
 </html>
