[compiler] replace counter example manual files with compiled ones

--- a/examples/counter/index.html
+++ b/examples/counter/index.html
@@ -8,7 +8,7 @@
     <div class="title">Jay Counter Example</div>
     <div>
       <div class="stage" id="target"></div>
-      <script type="module" src="lib/index.ts"></script>
+      <script type="module" src="src/index.ts"></script>
     </div>
   </body>
 </html>
