--- a/examples/jay/mini-benchmark/secure.html
+++ b/examples/jay/mini-benchmark/secure.html
@@ -8,7 +8,7 @@
     <div class="title">Jay mini Benchmark - Secure</div>
     <div>
       <div class="stage" id="target"></div>
-      <script type="module" src="lib-secure/main/index.ts"></script>
+      <script type="module" src="lib-secure/index.ts"></script>
     </div>
   </body>
 </html>
