--- a/exploration/svg/svg.html
+++ b/exploration/svg/svg.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Title</title>
     <script src="./svg.js"></script>
-</head>
-<body>
+  </head>
+  <body>
     <div id="target"></div>
-</body>
+  </body>
 </html>
